global sieve script for bogo

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -55,6 +55,7 @@ plugin {
    sieve_global_path = /var/lib/dovecot/sieve/default.sieve
    sieve_dir = /srv/mail/%Lu/Maildir/sieve/
    sieve_global_dir = /var/lib/dovecot/sieve/
+   sieve_after = /etc/dovecot/sieve/bogofilter.sieve
 }
 
 log_path=/dev/stdout
