--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -10,6 +10,8 @@ last_valid_uid = 1000
 
 postmaster_address = postmaster@example.com
 
+mail_max_userip_connections = 20
+
 # mail_debug = yes
 
 passdb {
