improve sieve handling, prepare to log stats

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -1,14 +1,14 @@
-protocols = imap submission sieve lmtp
-listen = *
 
 mail_home=/srv/mail/%Lu
 mail_location = maildir:~/Maildir
 mail_uid=1000
 mail_gid=1000
+postmaster_address = mail_root_wolke@etobi.de
+
+protocols = imap submission sieve lmtp
+
 first_valid_uid = 1000
 last_valid_uid = 1000
-
-postmaster_address = postmaster@example.com
 
 mail_max_userip_connections = 20
 
@@ -19,9 +19,9 @@ passdb {
   args = /etc/dovecot/passwd
 }
 
-ssl=no
-ssl_cert=
-ssl_key=
+ssl=yes
+ssl_cert=</etc/letsencrypt/live/wulkje.etobi.de/fullchain.pem
+ssl_key=</etc/letsencrypt/live/wulkje.etobi.de/privkey.pem
 
 namespace inbox {
   inbox = yes
@@ -54,23 +54,32 @@ service lmtp {
 
 plugin {
    sieve = /srv/mail/%Lu/Maildir/sieve/dovecot.sieve
-   sieve_global_path = /var/lib/dovecot/sieve/default.sieve
    sieve_dir = /srv/mail/%Lu/Maildir/sieve/
-   sieve_global_dir = /var/lib/dovecot/sieve/
-   sieve_after = /etc/dovecot/sieve/bogofilter.sieve
+   
+   sieve_global_path = /app/bin/sieve/default.sieve
+   sieve_global_dir = /app/bin/sieve/
+   
+   sieve_extensions = +vnd.dovecot.execute
+   sieve_plugins = sieve_extprograms
+   sieve_execute_bin_dir = /app/bin/sieve/
+   sieve_after = /app/bin/sieve/bogofilter.sieve
 }
+
+listen = *
 
 log_path=/dev/stdout
 info_log_path=/dev/stdout
 debug_log_path=/dev/stdout
 
-submission_relay_host =
+submission_relay_host = mail.rootserver02.de
 # Port for the relay server
 submission_relay_port = 25
 submission_relay_trusted = yes
 submission_client_workarounds = whitespace-before-path
 submission_relay_ssl = starttls
 submission_relay_ssl_verify = yes
+
+auth_mechanisms=plain login
 
 protocol lmtp {
   mail_plugins = " sieve"
@@ -79,5 +88,5 @@ protocol lda {
   mail_plugins = " sieve"
 }
 protocol imap {
-  mail_plugins = $mail_plugins imap_filter_sieve
+  mail_plugins = $mail_plugins imap_filter_sieve imap_sieve
 }
