--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -62,7 +62,7 @@ plugin {
    sieve_extensions = +vnd.dovecot.execute
    sieve_plugins = sieve_extprograms
    sieve_execute_bin_dir = /app/bin/sieve/
-   sieve_after = /app/bin/sieve/bogofilter.sieve
+   sieve_after = /app/bin/sieve/after/
 }
 
 listen = *
